EDU-935 Remove direct antd less usage

--- a/src/components/edit-control-panel.less
+++ b/src/components/edit-control-panel.less
@@ -29,11 +29,11 @@
   }
 
   &.EditControlPanel-statusIcon--dirty {
-    color: @gold-6
+    color: @edu-warning-color;
   }
 
   &.EditControlPanel-statusIcon--invalid {
-    color: @yellow-6
+    color: @edu-error-color;
   }
 }
 
