EDU-971 Remove JSON imports and obsolete code

--- a/src/components/localization/language-flag-and-name.less
+++ b/src/components/localization/language-flag-and-name.less
@@ -1,11 +1,11 @@
-.CountryFlagAndName {
+.LanguageFlagAndName {
   display: inline;
   white-space: nowrap;
 
-  &.CountryFlagAndName--stacked {
+  &.LanguageFlagAndName--stacked {
     display: block;
 
-    .CountryFlagAndName-flag {
+    .LanguageFlagAndName-flag {
       width: 100%;
       display: block;
       text-align: center;
@@ -13,7 +13,7 @@
       height: 6em;
     }
 
-    .CountryFlagAndName-name {
+    .LanguageFlagAndName-name {
       width: 100%;
       display: block;
       margin-top: 5px;
