EDU-935 Remove antd less variables usage

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -69,7 +69,7 @@
 @edu-modal-heading-color: @edu-content-title-color;
 @edu-label-color: @edu-content-title-color;
 @edu-table-header-color: @edu-content-title-color;
-@edu-table-row-hover-background-color: @background-color-light;
+@edu-table-row-hover-background-color: @edu-background-color-light;
 @edu-table-selected-row-background-color: @edu-selection-background-color;
 @edu-table-footer-color: @edu-text-color;
 @edu-card-head-color: @edu-content-title-color;
