--- a/src/components/color-picker.less
+++ b/src/components/color-picker.less
@@ -10,7 +10,7 @@
 .ColorPicker-currentColor {
   width: 72px;
   height: 30px;
-  border: 1px solid @input-border-color;
+  border: 1px solid @edu-border-color-base;
   border-radius: 4px;
   box-sizing: border-box;
   cursor: pointer;
@@ -23,7 +23,7 @@
   }
 
   &:hover {
-    border-color: @input-hover-border-color;
+    border-color: @edu-border-color-active;
     transition: all 300ms ease;
   }
 }
