EDU-935 Set up theme configuration

--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -8,7 +8,6 @@
 @import url('./bundles/page-template.less');
 @import url('./bundles/home-page-template.less');
 @import url('./bundles/home-page-illustration.less');
+@import url('./theme.less');
 
-@edu-font-family: 'Lato', sans-serif;
 @custom-home-page-illustration-background-color: #F2F5F8;
-
