EDU-935 Clean up less variables and streamline usage

--- a/src/components/flip-card.less
+++ b/src/components/flip-card.less
@@ -24,7 +24,7 @@
   overflow: auto;
   backface-visibility: hidden;
   border: 1px solid @edu-border-color-light;
-  border-radius: @edu-border-radius-sm;
+  border-radius: @edu-border-radius-base;
   background-color: @edu-white;
 
   &.FlipCard-face--front {
