--- a/src/components/media-player/media-player-progress-bar.less
+++ b/src/components/media-player/media-player-progress-bar.less
@@ -64,7 +64,7 @@
 .MediaPlayerProgressBar-progressTooltipText {
   font-size: 12px;
   padding: 4px 8px;
-  color: @edu-tooltip-text-color;
+  color: @edu-white;
   border-radius: @edu-border-radius-base;
   background-color: @edu-tooltip-background-color;
 }
