--- a/src/components/never-scrolling-text-area.less
+++ b/src/components/never-scrolling-text-area.less
@@ -1,6 +1,6 @@
 .NeverScrollingTextArea {
   .m-control-border-base;
-  background-color: @edu-component-background;
+  background-color: @edu-white;
   cursor: text;
   display: grid;
   grid-auto-flow: row;
