--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -15,7 +15,7 @@
   font-weight: bold;
   margin: 0 2.5em 0 0;
   color: @edu-text-color;
-  font-size: @edu-title-size;
+  font-size: @edu-heading-1-size;
 }
 
 .RoomPage-titleExtra {
