--- a/src/components/resource-picker/resource-preview.less
+++ b/src/components/resource-picker/resource-preview.less
@@ -26,7 +26,7 @@
   grid-column: 1;
   padding: @edu-content-padding;
   height: 360px;
-  border-radius: @edu-border-radius-boxy;
+  border-radius: @edu-border-radius-base;
   border: 1px solid @edu-border-color-light;
   background-color: @edu-white;
   display: flex;
