--- a/src/plugins/matching-cards/matching-cards.less
+++ b/src/plugins/matching-cards/matching-cards.less
@@ -9,7 +9,7 @@
   aspect-ratio: 1;
   margin: 0 auto;
   padding: @matching-cards-board-padding;
-  border-radius: @edu-border-radius-sm;
+  border-radius: @edu-border-radius-base;
   background-color: @edu-background-color-light;
 
   &.MatchingCardsDisplay-grid--3x3 {
