--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -6,7 +6,6 @@
 @edu-font-size-base: 14px;
 @edu-font-size-lg: @edu-font-size-base + 2px;
 @edu-font-size-sm: @edu-font-size-base - 2px;
-@edu-title-size: ceil(@edu-font-size-base * 2);
 @edu-heading-1-size: ceil(@edu-font-size-base * 1.85);
 @edu-heading-2-size: ceil(@edu-font-size-base * 1.55);
 @edu-heading-3-size: ceil(@edu-font-size-base * 1.40);
@@ -34,6 +33,8 @@
 @edu-control-height-sm: 24px;
 
 // Colors
+@edu-white: #FFFFFF;
+@edu-black: #000000;
 @edu-primary-color-light: #6D8BB1;
 @edu-primary-color-dark: #4F608E;
 @edu-secondary-color-light: #F5E3D6;
@@ -41,56 +42,27 @@
 @edu-text-color: #626262;
 @edu-text-color-secondary: #9A9A9A;
 @edu-disabled-color: #E6E6E6;
-@edu-disabled-color-checked: #BCBCBC;
+@edu-disabled-color-checked: #BCBCBC; // see if it can be removed
 @edu-background-color-base: #F0F0F0;
 @edu-background-color-light: #FAFAFA;
-@edu-component-background: @edu-white;
-@edu-content-title-color: #000000;
 @edu-border-color-dark: #BCBCBC;
 @edu-border-color-base: #D9D9D9;
 @edu-border-color-light: #E8E8E8;
 @edu-border-color-active: @edu-primary-color-light;
-@edu-tooltip-text-color: @edu-white;
 @edu-tooltip-background-color: rgba(62, 82, 118, 0.75);
 @edu-success-color: #57A773;
 @edu-error-color: #B02E0C;
 @edu-warning-color: #FA8C16;
-
-// Colors - antd mappings
-@edu-white: #FFFFFF;
-@edu-black: #000000;
+@edu-info-color: @edu-primary-color-light;
 @edu-link-color: inherit;
 @edu-link-decoration: underline;
 @edu-link-hover-color: inherit;
 @edu-link-active-color: inherit;
-@edu-normal-color: @edu-text-color;
 @edu-text-color-inverse: @edu-white;
 @edu-heading-color: @edu-primary-color-dark;
-@edu-modal-heading-color: @edu-content-title-color;
-@edu-label-color: @edu-content-title-color;
-@edu-table-header-color: @edu-content-title-color;
-@edu-table-row-hover-background-color: @edu-background-color-light;
-@edu-table-selected-row-background-color: @edu-selection-background-color;
-@edu-table-footer-color: @edu-text-color;
-@edu-card-head-color: @edu-content-title-color;
-@edu-tabs-color: @edu-text-color-secondary;
-@edu-tabs-ink-bar-color: @edu-text-color-secondary;
-@edu-tabs-highlight-color: @edu-text-color;
-@edu-tabs-hover-color: @edu-text-color;
-@edu-alert-message-color: @edu-text-color;
-@edu-info-color: @edu-primary-color-light;
-@edu-processing-color: @edu-primary-color-light;
+@edu-label-color: @edu-text-color;
 @edu-selection-background-color: @edu-background-color-base;
-@edu-progress-default-color: fade(@edu-primary-color-light, 60%);
-// Colors - slider
-@edu-slider-rail-background-color: @edu-background-color-base;
-@edu-slider-rail-background-color-hover: darken(@edu-background-color-base, 5%);
-@edu-slider-track-background-color: tint(@edu-primary-color-light, 40%);
-@edu-slider-track-background-color-hover: tint(@edu-primary-color-light, 20%);
-@edu-slider-dot-border-color: @edu-background-color-base;
-@edu-slider-dot-border-color-active: tint(@edu-primary-color-light, 20%);
-
-// // Outline
+// Colors - outline
 @edu-outline-blur-size: 0;
 @edu-outline-width: 2px;
 @edu-outline-color: @edu-primary-color-dark;
@@ -103,8 +75,6 @@
 
 // Border radii
 @edu-border-radius-base: 8px;
-@edu-border-radius-sm: @edu-border-radius-base;
-@edu-border-radius-boxy: 2px;
 
 // Responsiveness
 @edu-breakpoint-xs: 480px;
