EDU-935 Fix links and streamline links styles

--- a/src/plugins/table-of-contents/table-of-contents.less
+++ b/src/plugins/table-of-contents/table-of-contents.less
@@ -7,6 +7,7 @@
 .TableOfContentsDisplay-nodeList {
   padding: 0;
   list-style: none;
+  font-size: @edu-font-size-base;
 }
 
 .TableOfContentsDisplay-node {
