--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -54,12 +54,11 @@
 @edu-error-color: #B02E0C;
 @edu-warning-color: #FA8C16;
 @edu-info-color: @edu-primary-color-light;
-@edu-link-color: inherit;
+@edu-link-color: @edu-text-color;
 @edu-link-decoration: underline;
 @edu-link-hover-color: inherit;
 @edu-link-active-color: inherit;
 @edu-text-color-inverse: @edu-white;
-@edu-heading-color: @edu-primary-color-dark;
 @edu-label-color: @edu-text-color;
 @edu-selection-background-color: @edu-background-color-base;
 // Colors - outline
