--- a/test-app/src/bundles/page-footer.less
+++ b/test-app/src/bundles/page-footer.less
@@ -9,7 +9,7 @@
 }
 
 .PageFooter-link {
-  display: inline-block;
+  font-size: @edu-font-size-base;
 
   &:not(:last-child)::after {
     content: "\00A0\00A0|\00A0\00A0";
