--- a/src/components/default-page-footer.less
+++ b/src/components/default-page-footer.less
@@ -9,7 +9,7 @@
 }
 
 .DefaultPageFooter-link {
-  display: inline-block;
+  font-size: @edu-font-size-base;
 
   &:not(:last-child)::after {
     content: "\00A0\00A0|\00A0\00A0";
