--- a/src/components/history-control-panel.less
+++ b/src/components/history-control-panel.less
@@ -1,5 +1,4 @@
-.HistoryControlPanel {
-}
+.HistoryControlPanel {}
 
 .HistoryControlPanel-leftSide {
   flex: 1 0 0%;
@@ -15,7 +14,7 @@
 .HistoryControlPanel-slider {
   .m-antd-inverted-slider;
   flex: 1 0 0%;
-  margin: 6px;
+  margin: 6px !important;
 }
 
 .HistoryControlPanel-rightSide {
