--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -115,6 +115,8 @@
   .m-control-group;
   padding: 0 5px;
   height: @edu-control-height-sm;
+  color: @edu-text-color;
+  font-size: @edu-font-size-base;
   border: 1px solid @edu-border-color-dark;
   border-radius: @edu-border-radius-base;
   background-color: @edu-white;
