--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -55,9 +55,9 @@
 @edu-warning-color: #FA8C16;
 @edu-info-color: @edu-primary-color-light;
 @edu-link-color: @edu-text-color;
+@edu-link-hover-color: @edu-text-color;
+@edu-link-active-color: @edu-text-color;
 @edu-link-decoration: underline;
-@edu-link-hover-color: inherit;
-@edu-link-active-color: inherit;
 @edu-text-color-inverse: @edu-white;
 @edu-label-color: @edu-text-color;
 @edu-selection-background-color: @edu-background-color-base;
