--- a/src/components/delete-button.less
+++ b/src/components/delete-button.less
@@ -1,13 +1,13 @@
 .DeleteButton {
   .m-icon-button;
-  color: @edu-error-color;
+  color: @edu-error-color !important;
 
   &:active,
   &:visited {
-    color: @edu-error-color;
+    color: @edu-error-color !important;
   }
 
   &:hover {
-    color: lighten(@edu-error-color, 15%);
+    color: lighten(@edu-error-color, 15%) !important;
   }
 }
