--- a/src/components/pages/users.less
+++ b/src/components/pages/users.less
@@ -1,7 +1,7 @@
 .UsersPage {}
 
 .UsersPage-filter {
-  display: grid;
+  display: grid !important;
   grid-template-columns: 2fr 1fr;
 
   @media @edu-media-phone {
