--- a/src/plugins/table/table.less
+++ b/src/plugins/table/table.less
@@ -16,6 +16,7 @@
 .TableDisplay-cell {
   text-align: left;
   font-weight: normal;
+  color: @edu-text-color;
   border: 1px solid @table-plugin-cell-border-color;
   padding: @table-plugin-cell-padding;
 
