--- a/src/styles/elements.less
+++ b/src/styles/elements.less
@@ -1,6 +1,9 @@
 body {
   margin: 0;
+  color: @edu-text-color;
+  font-size: @edu-font-size-base;
   font-family: @edu-font-family;
+  line-height: @edu-line-height-base;
 }
 
 h1 {
@@ -25,20 +28,4 @@ h5 {
 
 h6 {
   font-size: @edu-heading-6-size;
-}
-
-a {
-  color: @edu-link-color;
-  text-decoration: @edu-link-decoration;
-
-  &:hover {
-    color: @edu-link-hover-color;
-    text-decoration: none;
-  }
-
-  &:active,
-  &:visited {
-    color: @edu-link-active-color;
-    color: @edu-link-color;
-  }
 }
