--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -31,6 +31,7 @@
 @edu-control-height-base: 32px;
 @edu-control-height-lg: 40px;
 @edu-control-height-sm: 24px;
+@edu-line-height-base: 1.7em;
 
 // Colors
 @edu-white: #FFFFFF;
