--- a/src/components/admin/settings-tab.less
+++ b/src/components/admin/settings-tab.less
@@ -1,10 +1,10 @@
 .SettingsTab {}
 
 .SettingsTab-collapse {
-  margin-top: 30px;
+  margin-top: 30px !important;
 
   &:first-of-type {
-    margin-top: 0;
+    margin-top: 0 !important;
   }
 }
 
