--- a/test-app/src/bundles/page-footer.less
+++ b/test-app/src/bundles/page-footer.less
@@ -8,10 +8,12 @@
   z-index: @edu-z-index-base-layer;
 }
 
-.PageFooter-link {
-  font-size: @edu-font-size-base;
-
+.PageFooter-linkWrapper {
   &:not(:last-child)::after {
     content: "\00A0\00A0|\00A0\00A0";
   }
+}
+
+.PageFooter-link {
+  .m-link;
 }
