EDU-935 Set up links and headlines global styles

--- a/src/styles/elements.less
+++ b/src/styles/elements.less
@@ -29,3 +29,23 @@ h5 {
 h6 {
   font-size: @edu-heading-6-size;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: @edu-primary-color-dark;
+  font-weight: @edu-heading-font-weight;
+}
+
+a {
+  color: inherit;
+  text-decoration: underline;
+
+  &:active,
+  &:hover {
+    text-decoration: none;
+  }
+}
