--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -12,6 +12,7 @@
 @edu-heading-4-size: ceil(@edu-font-size-base * 1.30);
 @edu-heading-5-size: ceil(@edu-font-size-base * 1.20);
 @edu-heading-6-size: ceil(@edu-font-size-base * 1.10);
+@edu-heading-font-weight: 500;
 
 // Layering
 // (should stay below 1000 as the antd layers begin there)
@@ -31,7 +32,7 @@
 @edu-control-height-base: 32px;
 @edu-control-height-lg: 40px;
 @edu-control-height-sm: 24px;
-@edu-line-height-base: 1.7em;
+@edu-line-height-base: 1.6em;
 
 // Colors
 @edu-white: #FFFFFF;
