EDU-935 More styling fixes

--- a/src/plugins/ear-training/ear-training.less
+++ b/src/plugins/ear-training/ear-training.less
@@ -26,11 +26,8 @@
 }
 
 .EarTrainingDisplay-radioGroup {
-  .m-horizontally-centered;
-  margin-top: 15px;
-  display: grid;
+  margin: 15px auto 0 auto !important;
   max-width: fit-content;
-  grid-template-columns: 1fr 1fr;
 }
 
 .EarTrainingDisplay-radioButton {
