--- a/src/plugins/quick-tester/quick-tester.less
+++ b/src/plugins/quick-tester/quick-tester.less
@@ -28,9 +28,7 @@
 }
 
 .QuickTesterDisplay-radioGroup {
-  margin-top: 15px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  margin-top: 15px !important;
 }
 
 .QuickTesterDisplay-radioButton {
@@ -42,7 +40,6 @@
 .QuickTesterDisplay-test {
   min-height: 200px;
   margin-top: 15px;
-  padding: 10px;
   width: 100%;
   display: flex;
   align-items: center;
