--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -14,7 +14,6 @@
     padding: @edu-content-padding;
     padding-top: @section-display-editable-padding-top;
     border-color: @edu-border-color-dark;
-    min-height: @section-display-min-height + @section-display-editable-padding-top;
 
     &:hover {
       border: 1px solid @edu-border-color-dark;
@@ -78,8 +77,8 @@
     &:hover,
     &:active,
     &:focus {
-      color: @edu-success-color;
-      border-color: @edu-success-color;
+      color: @edu-success-color !important;
+      border-color: @edu-success-color !important;
     }
   }
 
@@ -89,8 +88,8 @@
     &:hover,
     &:active,
     &:focus {
-      color: @edu-error-color;
-      border-color: @edu-error-color;
+      color: @edu-error-color !important;
+      border-color: @edu-error-color !important;
     }
   }
 
