EDU-935 Fix resource selector screens height

--- a/src/components/info.less
+++ b/src/components/info.less
@@ -2,9 +2,9 @@
 
 .Info-icon {
   margin: 0 @edu-control-spacing-base;
+  color: @edu-secondary-color-dark !important;
 
   &.Info-icon--help {
-    color: @edu-secondary-color-dark;
-    cursor: help;
+    cursor: help !important;
   }
 }
