--- a/src/components/resource-picker/resource-selector.less
+++ b/src/components/resource-picker/resource-selector.less
@@ -3,10 +3,15 @@
   position: relative;
 
   .ant-tabs {
-    height: 100%;
+    height: 100% !important;
 
     .ant-tabs-content {
-      height: 100%;
+      height: 100% !important;
+      position: unset !important;
+
+      .ant-tabs-tabpane {
+        height: 100% !important;
+      }
     }
   }
 }
