EDU-935 More style fixes and UI streamlining

--- a/src/components/comments-panel.less
+++ b/src/components/comments-panel.less
@@ -62,9 +62,9 @@
 }
 
 .CommentsPanel-addButton {
+  display: flex !important;
   margin-top: 20px;
   margin-left: auto;
-  display: flex;
 }
 
 .CommentsPanel-editTopicButtonsGroup {
