--- a/src/components/markdown-input.less
+++ b/src/components/markdown-input.less
@@ -5,14 +5,14 @@
 .MarkdownInput-input {
 
   .ant-input-group-addon {
-    color: @edu-text-color;
-    background-color: @edu-secondary-color-light;
+    color: @edu-text-color !important;
+    background-color: @edu-secondary-color-light !important;
   }
 
   &.is-disabled {
     .ant-input-group-addon {
-      cursor: not-allowed;
-      background-color: @edu-disabled-color;
+      cursor: not-allowed !important;
+      background-color: @edu-disabled-color !important;
     }
   }
 }
