--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -98,9 +98,8 @@
 }
 
 .RoomPage-cardButton {
-  display: block;
-  margin-left: 20px;
-  margin-right: auto;
+  display: block !important;
+  margin: 0 auto 0 20px !important;
 }
 
 .RoomPage-cardDangerAction {
