--- a/src/components/profile-header.less
+++ b/src/components/profile-header.less
@@ -20,6 +20,7 @@
   font-weight: bold;
   color: @edu-text-color;
   font-size: @edu-heading-1-size;
+  line-height: 40px;
 }
 
 .ProfileHeader-organization {
