--- a/src/styles/breadcrumbs.less
+++ b/src/styles/breadcrumbs.less
@@ -1,4 +1,8 @@
 .Breadcrumbs {
-  font-size: 12px;
-  padding-bottom: 2 * @edu-content-padding;
+  font-size: 12px !important;
+  padding-bottom: 2 * @edu-content-padding !important;
+
+  .ant-breadcrumb-link:hover {
+    background-color: unset !important;
+  }
 }
