--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -44,6 +44,7 @@
 @edu-text-color: #626262;
 @edu-text-color-secondary: #9A9A9A;
 @edu-disabled-color: #E6E6E6;
+@edu-disabled-background-color: transparent;
 @edu-disabled-color-checked: #BCBCBC; // see if it can be removed
 @edu-background-color-base: #F0F0F0;
 @edu-background-color-light: #FAFAFA;
