EDU-935 More style fixes; improve modal content spacing

--- a/src/plugins/diagram-net/diagram-net.less
+++ b/src/plugins/diagram-net/diagram-net.less
@@ -13,3 +13,9 @@
   max-width: 400px;
   border: 1px solid @edu-border-color-base;
 }
+
+.DiagramNetEditor-modal {
+  .ant-modal-content {
+    padding: 0 !important;
+  }
+}
