EDU-936 Update all other dependencies

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,8 +1,8 @@
 // Library imports
-@import 'flag-icon-css/less/flag-icon.less';
+@import 'flag-icons/less/flag-icons.less';
 
-// Setting the path prefix for the flag-icon library:
-@flag-icon-css-path: '/images/flags';
+// Setting the path prefix for the flag-icons library:
+@flag-icons-path: '/images/flags';
 
 // Shared educandu styles and variables
 @import './global-variables.less';
