EDU-991 Create and use an account locked out component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -85,6 +85,7 @@
 @import '../components/media-player/track-mixer.less';
 @import '../components/resource-picker/utilities.less';
 @import '../components/never-scrolling-text-area.less';
+@import '../components/irrecoverable-login-error.less';
 @import '../components/localization/language-icon.less';
 @import '../components/pages/complete-registration.less';
 @import '../components/pages/browser-not-supported.less';
