EDU-991 Rename 'irreversable' to 'blocked' in context of login errors

--- a/src/components/blocked-login-error.less
+++ b/src/components/blocked-login-error.less
@@ -1,4 +1,4 @@
-.IrrecoverableLoginError {
+.BlockedLoginError {
   color: @edu-error-color;
   text-align: center;
   display: flex;
@@ -7,6 +7,6 @@
   justify-content: center;
 }
 
-.IrrecoverableLoginError-contactAdminMessage {
+.BlockedLoginError-contactAdminMessage {
   margin-top: 20px;
 }
