EDU-992 Add external account option on login page

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -93,6 +93,7 @@
 @import '../components/pages/complete-password-reset.less';
 @import '../components/media-player/media-player-track.less';
 @import '../components/admin/technical-maintenance-tab.less';
+@import '../components/external-account-provider-dialog.less';
 @import '../components/resource-picker/resource-preview.less';
 @import '../components/media-player/media-volume-slider.less';
 @import '../components/resource-picker/storage-location.less';
