--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -91,9 +91,11 @@
 @import '../components/pages/browser-not-supported.less';
 @import '../components/resource-picker/files-viewer.less';
 @import '../components/pages/complete-password-reset.less';
+@import '../components/media-player/plyr/media-player.less';
 @import '../components/media-player/media-player-track.less';
 @import '../components/admin/technical-maintenance-tab.less';
 @import '../components/external-account-provider-dialog.less';
+@import '../components/media-player/plyr/media-playback.less';
 @import '../components/resource-picker/resource-preview.less';
 @import '../components/media-player/media-volume-slider.less';
 @import '../components/resource-picker/storage-location.less';
