EDU-998 Center reset button under matching-cards

--- a/src/plugins/matching-cards/matching-cards.less
+++ b/src/plugins/matching-cards/matching-cards.less
@@ -1,7 +1,10 @@
 @matching-cards-board-padding: 10px;
 @matching-cards-board-tiles-gap: 10px;
 
-.MatchingCardsDisplay {}
+.MatchingCardsDisplay {
+  display: flex;
+  flex-direction: column;
+}
 
 .MatchingCardsDisplay-grid {
   display: grid;
