EDU-999 Reduce font size in matching-cards on mobile

--- a/src/plugins/matching-cards/matching-cards.less
+++ b/src/plugins/matching-cards/matching-cards.less
@@ -91,6 +91,10 @@
   display: flex;
   justify-content: center;
   text-align: center;
+
+  @media @edu-media-phone {
+    font-size: 12px;
+  }
 }
 
 .MatchingCardsTile-match {
