EDU-999 Disable mobile tap highlighting

--- a/src/styles/elements.less
+++ b/src/styles/elements.less
@@ -4,6 +4,7 @@ body {
   font-size: @edu-font-size-base;
   font-family: @edu-font-family;
   line-height: @edu-line-height-base;
+  -webkit-tap-highlight-color: transparent;
 }
 
 h1 {
