EDU-1002 Show pointer on media-playback

--- a/src/components/media-player/plyr/media-playback.less
+++ b/src/components/media-player/plyr/media-playback.less
@@ -2,6 +2,7 @@
 
 .MediaPlayback {
   --plyr-video-background: @edu-white;
+  cursor: pointer;
   position: relative;
 
   &.MediaPlayback--audioOnly iframe {
