EDU-997 Do not render flip cards on print (otherwise they print face up)

--- a/src/components/flip-card.less
+++ b/src/components/flip-card.less
@@ -73,3 +73,9 @@
   background-color: darken(@edu-background-color-base, 5%);
   opacity: 0.85;
 }
+
+@media print {
+  .FlipCard-face {
+    display: none;
+  }
+}
