--- a/src/components/flip-card.less
+++ b/src/components/flip-card.less
@@ -74,8 +74,7 @@
   opacity: 0.85;
 }
 
-@media print {
-  .FlipCard-face {
-    display: none;
-  }
+.FlipCard-hiddenOverlay {
+  .m-mask;
+  background-color: inherit;
 }
