EDU-1011 Drop the 'commons' in 'wikimedia'

--- a/src/components/resource-picker/wikimedia-search.less
+++ b/src/components/resource-picker/wikimedia-search.less
@@ -1,4 +1,4 @@
-.WikimediaCommonsSearch {
+.WikimediaSearch {
   height: 100%;
   display: grid;
   grid-template-columns: 100%;
@@ -9,7 +9,7 @@
   }
 }
 
-.WikimediaCommonsSearch-noSearch {
+.WikimediaSearch-noSearch {
   margin: 20px 0;
   display: flex;
   flex-direction: column;
@@ -18,41 +18,41 @@
   text-align: center;
 }
 
-.WikimediaCommonsSearch-searchInvitationIcon {
+.WikimediaSearch-searchInvitationIcon {
   font-size: 60px;
 }
 
-.WikimediaCommonsSearch-searchInvitationHeader {
+.WikimediaSearch-searchInvitationHeader {
   font-size: 110%;
   font-weight: bold;
   margin-bottom: 10px;
 }
 
-.WikimediaCommonsSearch-searchInvitationDescription {
+.WikimediaSearch-searchInvitationDescription {
   font-size: 90%;
 }
 
-.WikimediaCommonsSearch-initialFilePreviewHeader {
+.WikimediaSearch-initialFilePreviewHeader {
   margin-bottom: 20px;
 }
 
-.WikimediaCommonsSearch-initialFilePreviewFooter {
+.WikimediaSearch-initialFilePreviewFooter {
   font-size: 90%;
   margin-top: 20px;
 }
 
-.WikimediaCommonsSearch-filesViewer {
+.WikimediaSearch-filesViewer {
   margin: 20px 0;
   border: 1px solid @edu-border-color-base;
   overflow: hidden;
 }
 
-.WikimediaCommonsSearch-filesViewerContent {
+.WikimediaSearch-filesViewerContent {
   height: 100%;
   overflow: auto;
 }
 
-.WikimediaCommonsSearch-buttonsLine {
+.WikimediaSearch-buttonsLine {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -65,17 +65,17 @@
   }
 }
 
-.WikimediaCommonsSearch-buttonsLineItem {
+.WikimediaSearch-buttonsLineItem {
   white-space: nowrap;
   margin: @edu-control-spacing-base @edu-control-spacing-wide 0 @edu-control-spacing-wide;
 }
 
-.WikimediaCommonsSearch-searchFileTypeLabel {
+.WikimediaSearch-searchFileTypeLabel {
   display: inline-block;
   margin-right: @edu-control-spacing-wide;
 }
 
-.WikimediaCommonsSearch-searchInfo {
+.WikimediaSearch-searchInfo {
   min-height: 40px;
   margin-bottom: 20px;
 }
