--- a/src/components/resource-picker/wikimedia-files-viewer.less
+++ b/src/components/resource-picker/wikimedia-files-viewer.less
@@ -1,11 +1,11 @@
-.WikimediaCommonsFilesViewer {
+.WikimediaFilesViewer {
   width: 100%;
   height: 100%;
   overflow: auto;
   position: relative;
 }
 
-.WikimediaCommonsFilesViewer-loadingOverlay {
+.WikimediaFilesViewer-loadingOverlay {
   position: absolute;
   top: 0;
   right: 0;
@@ -21,7 +21,7 @@
   }
 }
 
-.WikimediaCommonsFilesViewer-files {
+.WikimediaFilesViewer-files {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
@@ -29,24 +29,25 @@
   padding: 5px;
 }
 
-.WikimediaCommonsFilesViewer-itemContainer {
+.WikimediaFilesViewer-itemContainer {
   width: 80px;
   padding: 5px;
   margin: 10px;
   position: relative;
 
-  &.WikimediaCommonsFilesViewer-itemContainer--file {
+  &.WikimediaFilesViewer-itemContainer--file {
     border-radius: @edu-border-radius-base;
 
     &.is-selected {
       background-color: @edu-selection-background-color;
     }
+
     &:hover {
       .m-box-shadow;
     }
   }
 
-  &.WikimediaCommonsFilesViewer-itemContainer--sentry {
+  &.WikimediaFilesViewer-itemContainer--sentry {
     height: 80px;
     display: flex;
     align-items: center;
@@ -58,7 +59,7 @@
   }
 }
 
-.WikimediaCommonsFilesViewer-file {
+.WikimediaFilesViewer-file {
   .m-overflow-ellipsis;
   display: block;
   text-align: center;
@@ -72,11 +73,11 @@
   }
 }
 
-.WikimediaCommonsFilesViewer-fileName {
+.WikimediaFilesViewer-fileName {
   user-select: none;
 }
 
-.WikimediaCommonsFilesViewer-fileDisplay {
+.WikimediaFilesViewer-fileDisplay {
   height: 60px;
   font-size: 60px;
   display: flex;
@@ -85,12 +86,12 @@
   justify-content: center;
 }
 
-.WikimediaCommonsFilesViewer-fileDisplayImage {
+.WikimediaFilesViewer-fileDisplayImage {
   max-width: 100%;
   max-height: 100%;
 }
 
-.WikimediaCommonsFilesViewer-actions {
+.WikimediaFilesViewer-actions {
   display: none;
   position: absolute;
   top: -(@edu-control-height-sm / 2);
