EDU-1011 Indicate public and private storages

--- a/src/components/resource-picker/storage-location.less
+++ b/src/components/resource-picker/storage-location.less
@@ -59,3 +59,13 @@
   background-color: @edu-background-color-light;
   z-index: @edu-z-index-sticky-content-layer;
 }
+
+.StorageLocation-alertPrivateStorage {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.StorageLocation-alertPrivateStorageUsage {
+  flex-grow: 1;
+  margin-left: 5px;
+}
