--- a/src/components/used-storage.less
+++ b/src/components/used-storage.less
@@ -5,6 +5,10 @@
 .UsedStorage-progress {
   display: flex;
   align-items: baseline;
+
+  .ant-progress {
+    margin-bottom: 0 !important;
+  }
 }
 
 .UsedStorage-progressLabel {
