EDU-1021 Fix matched overlay position on scrollable cards

--- a/src/components/flip-card.less
+++ b/src/components/flip-card.less
@@ -1,5 +1,13 @@
 .FlipCard {
   perspective: 600px;
+  position: relative;
+}
+
+.FlipCard-disabledOverlay {
+  .m-mask;
+  border-radius: @edu-border-radius-base;
+  background-color: darken(@edu-background-color-base, 5%);
+  opacity: 0.85;
 }
 
 .FlipCard-content {
@@ -64,14 +72,7 @@
 }
 
 .FlipCard-faceContent {
-  width: 100%;
   margin: auto;
-}
-
-.FlipCard-disabledOverlay {
-  .m-mask;
-  background-color: darken(@edu-background-color-base, 5%);
-  opacity: 0.85;
 }
 
 .FlipCard-hiddenOverlay {
