EDU-994 Extend SAML login flow for non-linked external accounts

--- a/src/components/login-form.less
+++ b/src/components/login-form.less
@@ -4,3 +4,8 @@
   line-height: initial;
   color: @edu-error-color;
 }
+
+.LoginForm-forgotPasswordLink {
+  margin-top: 24px;
+  text-align: right;
+}
