--- a/src/components/pages/login.less
+++ b/src/components/pages/login.less
@@ -6,13 +6,8 @@
 }
 
 .LoginPage-form {
-  .m-login-form;
+  .m-narrow-fullscreen-page-content;
   padding-bottom: 120px;
-}
-
-.LoginPage-forgotPasswordLink {
-  margin-top: 24px;
-  text-align: right;
 }
 
 .LoginPage-loginButton {
