--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -68,6 +68,7 @@
 @import '../components/copyright-notice.less';
 @import '../components/default-site-logo.less';
 @import '../components/input-and-preview.less';
+@import '../components/registration-form.less';
 @import '../components/edit-control-panel.less';
 @import '../components/ui-language-dialog.less';
 @import '../components/admin/settings-tab.less';
@@ -89,6 +90,7 @@
 @import '../components/localization/language-icon.less';
 @import '../components/pages/complete-registration.less';
 @import '../components/pages/browser-not-supported.less';
+@import '../components/pages/link-external-account.less';
 @import '../components/resource-picker/files-viewer.less';
 @import '../components/pages/complete-password-reset.less';
 @import '../components/media-player/plyr/media-player.less';
