--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -141,9 +141,14 @@
   }
 }
 
-.m-login-form {
+.m-narrow-fullscreen-page-content {
   margin: 0 auto;
   max-width: 360px;
+}
+
+.m-medium-fullscreen-page-content {
+  margin: 0 auto;
+  max-width: 480px;
 }
 
 .m-horizontally-centered {
