--- a/src/components/pages/register.less
+++ b/src/components/pages/register.less
@@ -6,18 +6,5 @@
 }
 
 .RegisterPage-form {
-  .m-login-form;
-
-  .ant-checkbox-wrapper {
-    line-height: initial;
-  }
-}
-
-.RegisterPage-formButton {
-  margin-top: 48px;
-}
-
-.RegisterPage-confirmation {
-  margin-top: 100px;
-  text-align: center;
+  .m-narrow-fullscreen-page-content;
 }
