EDU-994 Rename link-external-account to connect-external-account

--- a/src/components/pages/connect-external-account.less
+++ b/src/components/pages/connect-external-account.less
@@ -1,43 +1,43 @@
-.LinkExternalAccountPage {}
+.ConnectExternalAccountPage {}
 
-.LinkExternalAccountPage-choicesView {
+.ConnectExternalAccountPage-choicesView {
   .m-medium-fullscreen-page-content;
 }
 
-.LinkExternalAccountPage-loginView {
+.ConnectExternalAccountPage-loginView {
   .m-narrow-fullscreen-page-content;
   padding-bottom: 120px;
 }
 
-.LinkExternalAccountPage-registerView {
+.ConnectExternalAccountPage-registerView {
   .m-narrow-fullscreen-page-content;
 }
 
-.LinkExternalAccountPage-title {
+.ConnectExternalAccountPage-title {
   text-align: center;
   margin-bottom: 32px;
 }
 
-.LinkExternalAccountPage-viewTitle {
+.ConnectExternalAccountPage-viewTitle {
   text-align: center;
   margin-bottom: 32px;
 }
 
-.LinkExternalAccountPage-description {
+.ConnectExternalAccountPage-description {
   margin-bottom: 32px;
 }
 
-.LinkExternalAccountPage-choices {
+.ConnectExternalAccountPage-choices {
   display: grid;
   grid-auto-flow: row;
   gap: @edu-control-spacing-wide;
   margin-bottom: 32px;
 }
 
-.LinkExternalAccountPage-loginButton {
+.ConnectExternalAccountPage-loginButton {
   margin-top: 38px;
 }
 
-.LinkExternalAccountPage-backButton {
+.ConnectExternalAccountPage-backButton {
   margin-top: @edu-control-spacing-wide;
 }
