EDU-994 Move login buttons into login-form

--- a/src/components/login-form.less
+++ b/src/components/login-form.less
@@ -6,6 +6,14 @@
 }
 
 .LoginForm-forgotPasswordLink {
-  margin-top: 24px;
+  margin-top: @edu-control-height-sm;
   text-align: right;
+}
+
+.LoginForm-loginButton {
+  margin-top: @edu-control-height-lg;
+
+  &.LoginForm-loginButton--secondary {
+    margin-top: @edu-control-spacing-wide;
+  }
 }
