--- a/src/components/registration-form.less
+++ b/src/components/registration-form.less
@@ -1,12 +1,13 @@
-.RegistrationForm {
+.RegistrationForm {}
 
-  .ant-checkbox-wrapper {
+.RegistrationForm-termsAndConditionsCheckbox {
+  &.ant-checkbox-wrapper {
     line-height: initial;
   }
 }
 
-.RegistrationForm-formButton {
-  margin-top: 48px;
+.RegistrationForm-registerButton {
+  margin-top: @edu-control-height-lg;
 }
 
 .RegistrationForm-confirmation {
