--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -359,3 +359,16 @@
     text-decoration: none;
   }
 }
+
+.m-video-play-icon {
+  .m-box-shadow;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  font-size: 25px;
+  color: @edu-white;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.4);
+}
