EDU-1030 Support range in video plugin

--- a/src/components/media-player/media-range-selector.less
+++ b/src/components/media-player/media-range-selector.less
@@ -19,12 +19,16 @@
 .MediaRangeSelector-rangeSelector {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+}
+
+.MediaRangeSelector-rangeSelectorLabel {
+  margin-right: 15px;
 }
 
 .MediaRangeSelector-rangeSelectorButtons {
   display: grid;
   gap: 10px;
-  margin-left: 15px;
   grid-auto-flow: column;
 }
 
