EDU-1005 Update matching-cards to use plyr player and range selector

--- a/src/components/media-player/plyr/html5-player.less
+++ b/src/components/media-player/plyr/html5-player.less
@@ -1,6 +1,14 @@
 .Html5Player {
   position: relative;
   height: 100%;
+
+  .plyr {
+    min-width: 50px;
+
+    video {
+      position: initial;
+    }
+  }
 }
 
 .Html5Player-posterImage {
