--- a/src/plugins/matching-cards/matching-cards.less
+++ b/src/plugins/matching-cards/matching-cards.less
@@ -76,13 +76,13 @@
   height: 100%;
 }
 
-.MatchingCardsTile {}
+.MatchingCardsTileDisplay {}
 
-.MatchingCardsTile-image {
+.MatchingCardsTileDisplay-image {
   max-width: 100%;
 }
 
-.MatchingCardsTile-audio {
+.MatchingCardsTileDisplay-audio {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -95,7 +95,7 @@
   }
 }
 
-.MatchingCardsTile-markdown {
+.MatchingCardsTileDisplay-markdown {
   padding: 8px;
   display: flex;
   justify-content: center;
@@ -106,6 +106,6 @@
   }
 }
 
-.MatchingCardsTile-noInnerClickMask {
+.MatchingCardsTileDisplay-noInnerClickMask {
   .m-mask;
 }
