--- a/src/components/media-player/plyr/youtube-player.less
+++ b/src/components/media-player/plyr/youtube-player.less
@@ -1,6 +1,14 @@
 .YoutubePlayer {
   position: relative;
   height: 100%;
+
+  .plyr {
+    min-width: 50px;
+
+    iframe {
+      position: initial;
+    }
+  }
 }
 
 .YoutubePlayer-posterImage {
