EDU-1007 Switch media-slideshow plugin to plyr-based player

--- a/src/components/media-player/plyr/media-player.less
+++ b/src/components/media-player/plyr/media-player.less
@@ -37,7 +37,7 @@
 
 .MediaPlayer-playerCustomScreenOverlay {
   .m-mask;
-  cursor: inherit;
+  cursor: default;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -45,7 +45,7 @@
 
 .MediaPlayer-playerAudioScreenOverlay {
   .m-mask;
-  cursor: inherit;
+  cursor: default;
   display: flex;
   align-items: center;
   justify-content: center;
