--- a/src/components/media-player/plyr/media-player.less
+++ b/src/components/media-player/plyr/media-player.less
@@ -8,6 +8,11 @@
     border-radius: @edu-border-radius-base;
     background-color: @edu-background-color-light;
   }
+
+  &.MediaPlayer--hidden {
+    padding: 0;
+    height: 0;
+  }
 }
 
 .MediaPlayer-player {
