--- a/src/components/registration-form.less
+++ b/src/components/registration-form.less
@@ -1,5 +1,17 @@
 .RegistrationForm {}
 
+.RegistrationForm-steps {
+  margin-bottom: 50px;
+}
+
+.RegistrationForm-step {
+  font-size: @edu-font-size-sm !important;
+
+  &.is-selected {
+    font-weight: bold;
+  }
+}
+
 .RegistrationForm-termsAndConditionsCheckbox {
   &.ant-checkbox-wrapper {
     line-height: initial;
@@ -10,7 +22,7 @@
   margin-top: @edu-control-height-lg;
 }
 
-.RegistrationForm-confirmation {
-  margin-top: 100px;
+.RegistrationForm-verificationMessage {
   text-align: center;
+  margin-bottom: 50px;
 }
