--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -16,7 +16,6 @@
 @import '../components/table.less';
 @import '../components/alert.less';
 @import '../components/markdown.less';
-@import '../components/news-tab.less';
 @import '../components/url-input.less';
 @import '../components/room-card.less';
 @import '../components/rooms-tab.less';
@@ -54,6 +53,7 @@
 @import '../components/markdown-help.less';
 @import '../components/card-selector.less';
 @import '../components/action-button.less';
+@import '../components/activities-tab.less';
 @import '../components/comments-panel.less';
 @import '../components/consent-drawer.less';
 @import '../components/credits-footer.less';
