--- a/src/components/activities-tab.less
+++ b/src/components/activities-tab.less
@@ -1,50 +1,54 @@
-@activities-tab-activity-grid-gap: 20px;
+@activities-item-label-width: 140px;
+@activities-item-content-inset-inline-start: @activities-item-label-width + 20px;
 
 .ActivitiesTab-info {
   .m-info-card;
 }
 
-.ActivitiesTab-activity {
-  display: grid;
-  font-size: 13px;
-  gap: @activities-tab-activity-grid-gap;
-  align-items: center;
-  grid-auto-flow: column;
-  justify-content: flex-start;
-  padding: 15px 20px;
-  margin-bottom: 10px;
-  color: @edu-text-color-secondary;
-  border-radius: @edu-border-radius-base;
-  background-color: @edu-background-color-base;
+.ActivitiesTab-timeline {
+  display: flex;
+
+  .ant-timeline-item-last {
+    .ant-timeline-item-tail {
+      display: none;
+    }
+  }
+
+  .ant-timeline-item-label {
+    width: @activities-item-label-width !important;
+  }
+
+  .ant-timeline-item-tail,
+  .ant-timeline-item-head {
+    inset-inline-start: @activities-item-content-inset-inline-start !important;
+  }
+
+  .ant-timeline-item-content {
+    inset-inline-start: @activities-item-content-inset-inline-start !important;
+    width: %(~"calc(100% - %s) !important", '12px');
+  }
 
   @media @edu-media-phone {
-    gap: 3px;
-    grid-auto-flow: row;
+    .ant-timeline-item-label {
+      display: none;
+    }
+
+    .ant-timeline-item-tail,
+    .ant-timeline-item-head,
+    .ant-timeline-item-content {
+      inset-inline-start: 0px !important;
+    }
   }
 }
 
-.ActivitiesTab-activityMetadata {
-  display: grid;
-  gap: @activities-tab-activity-grid-gap;
-  align-items: center;
-  grid-auto-flow: column;
-  justify-content: flex-start;
+.ActivitiesTab-activityLabel {
+  font-style: italic;
 }
 
-.ActivitiesTab-activityMetadataIcon {
-  font-size: 18px;
-  color: @edu-text-color;
-}
-
-.ActivitiesTab-activityData {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.ActivitiesTab-activityDataDescription {
+.ActivitiesTab-activityDescription {
   margin-right: 5px;
 }
 
-.ActivitiesTab-activityDataLink {
+.ActivitiesTab-activityLink {
   .m-link;
 }
