EDU-1061 Extract user card component

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -21,6 +21,7 @@
 @import '../components/rooms-tab.less';
 @import '../components/pages/doc.less';
 @import '../components/flip-card.less';
+@import '../components/user-card.less';
 @import '../components/pages/user.less';
 @import '../components/pages/docs.less';
 @import '../components/error-page.less';
