EDU-1061 Rework document-card component

--- a/src/components/favorites-tab.less
+++ b/src/components/favorites-tab.less
@@ -21,15 +21,19 @@
 .FavoritesTab-cards {
   .m-section-content;
   .m-card-wrapper;
+
+  &.FavoritesTab-cards--documents {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    @media @edu-media-phone {
+      grid-template-columns: auto;
+    }
+  }
 }
 
 .FavoritesTab-cardWrapper {
   position: relative;
-
-  &.FavoritesTab-cardWrapper--document {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
 }
 
 .FavoritesTab-cardStar {
