EDU-1061 Fix showing last created documents on profile page

--- a/src/components/favorites-tab.less
+++ b/src/components/favorites-tab.less
@@ -23,12 +23,7 @@
   .m-card-wrapper;
 
   &.FavoritesTab-cards--documents {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-
-    @media @edu-media-phone {
-      grid-template-columns: auto;
-    }
+    .m-card-wrapper-wide;
   }
 }
 
